--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    <h1>Olá, eu sou a Primeira versão do Arquivo!</h1>
+    <div style="text-align: center;">
+        <h1>Site em construção...</h1>
+        <p>Por favor, volte novamente mais tarde.</p>
+    </div>
 </body>
 
 </html>
