--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h1>Site em construção...</h1>
         <p>Por favor, volte novamente mais tarde.</p>
         <p>Para mais informações contacte o Desenvolvedor Responsável.</p>
+        <button class="btn btn-dark">Ligar para o Suporte</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
